# vmware-ansible-vm-deploy

./: .gitignore  Readme.md  ansible.cfg  pyproject.toml
inventory/: hosts
inventory/group_vars/: all.yml
ubuntu/: deploy.yml  vars.yml
ubuntu/roles/deploy-vm/tasks/: main.yml
ubuntu/roles/deploy-vm/templates/: user-data.j2
ubuntu/roles/prepare/create-folder/tasks/: main.yml
ubuntu/roles/prepare/create-rp/tasks/: main.yml
ubuntu/roles/prepare/define-vars/tasks/: main.yml
