[project]
name = "vmware-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "makgol"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=11.3.0,<12.0.0)",
    "pyvmomi (>=8.0.3.0.1,<9.0.0.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "netaddr (>=1.3.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
